# pyldap

./: .gitignore  Makefile  conn.py  docker-compose.yaml  go.work  pyproject.toml  readme.md
backend/: Makefile  pyproject.toml  readme.md
backend/backend/: .dockerignore  Dockerfile  __init__.py  background_tasks.py  init.sh  requirements.txt  server.py  supervisord.conf
backend/backend/db/: __init__.py  mongo.py  redis.py
backend/backend/db/postgres/: models.py
backend/backend/migrations/models/: 0_20230504130115_init.py  0_20230611204939_init.py  0_20230713232554_init.py  0_20230714145703_init.py  0_20230730141454_init.py  1_20230504131251_update.py  1_20230611220636_update.py  1_20230821145141_update.py  1_20230831141142_None.py  1_20231205133518_add name field.py
backend/backend/models/: __init__.py  ldap.py  schema.py
backend/backend/routers/: __init__.py  auth.py  computers.py  files.py  network.py  organizations.py  users.py  websockets.py
backend/backend/utils/: __init__.py  auth.py  background_tasks.py  connector.py  utilits.py
backend/tests/: utils_test.py
net/: go.mod
net/client/: client.go
net/server/: server.go
netclient/: data.go  go.mod  netclient  netclient.go  protocol.go  readme.md  service.bat  utils.go
netserver/: .dockerignore  Dockerfile  cli.go  data.go  go.mod  netserver.go  protocol.go  readme.md  utils.go
pyldap/: .dockerignore  Dockerfile  init.sh  pyproject.toml  requirements.txt  server.py
pyldap/db/: __init__.py  postgres.py  redis.py
pyldap/models/: domain.py  ldap.py  schema.py
pyldap/routers/: auth.py  computers.py  network.py  organizations.py  users.py
pyldap/utils/: __init__.py  auth.py  background_tasks.py  connector.py  shell.py  utilits.py
tesseract/: pyproject.toml
tesseract/tesseract/: test.py
tests/: connector_test.py  redis_test.py  utils_test.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+41 files in other folders)
